src/css/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root:has(:is(.modal-open, .modal:target, .modal-toggle:checked + .modal, .modal[open])) {
    overflow: hidden;
    scrollbar-gutter: auto;
    /* Only reserves space if a scrollbar is present */
}

/* Navbar.css */
.collapse-menu {
    transition: transform 0.3s ease-in-out;
    transform: translateY(-100%);
    pointer-events: none;
}

.collapse-menu.open {
    transform: translateY(0);
    pointer-events: auto;
}

.collapse-menu.closed {
    transform: translateY(-100%);
    pointer-events: none;
}

.collapse[open]> :where(.collapse-content),
.collapse-open> :where(.collapse-content),
.collapse:focus:not(.collapse-close)> :where(.collapse-content),
.collapse:not(.collapse-close)> :where(input[type="checkbox"]:checked ~ .collapse-content),
.collapse:not(.collapse-close)> :where(input[type="radio"]:checked ~ .collapse-content) {
    padding-bottom: 0.5rem;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.scrollbar-hide::-webkit-scrollbar {
    display: none;
}

/* Hide scrollbar for IE, Edge, and Firefox */
.scrollbar-hide {
    -ms-overflow-style: none;
    /* IE and Edge */
    scrollbar-width: none;
    /* Firefox */
}

